--- a/doc/report/1-назначение.tex
+++ b/doc/report/1-назначение.tex
@@ -5,22 +5,31 @@
 
 Язык программирования \thelang{} разработан в рамках работы на семейством языков программирования \href{http://алексейнедоря.рф/?p=419}{\myref{Языки выходного дня}}  (ЯВД)  проекта \href{http://digital-economy.ru/stati/интенсивное-программирование}{\myref{Интенсивное программирования}}.
 
-\thelang{} является нулевым языком семейства ЯВД, предназначенным для реализации компиляторов и экосистемы других языков семейства. В рамках классификации языков, принятом в проекте Интенсивное программирования, это язык L2.
+\thelang{} является предварительным языком семейства ЯВД, предназначенным для реализации компиляторов и экосистемы следующих языков семейства. В рамках классификации языков, принятом в проекте Интенсивное программирования, это язык L2.
 
-
-Основными требованиями к языку при разработке были поставлены
+Основными требованиями к языку были поставлены:
 \begin{d_itemize}
 \item 
-    Язык должен быть минимально достаточным для удобной разработки компиляторов. Требование это во многом субъективно, так как компиляторы можно писать существенно по разному.
+    язык должен быть минимально достаточным, то есть в него должны быть включены только те типы и конструкции, которые необходимы для реализации компиляторов
 \item 
-    Язык должен быть русскоязычным и с синтаксисом минимизирующим переключение на латиницу в процессе разработки программ.
+    язык должен быть современным с точки зрения набора конструкций
+\item 
+    язык должен поддерживать надежное программирование (автоматическое управление памятью, отсутствие неопределенного поведение, безопасность указателей, 
+    минимизация неявных конструкций)
+\item 
+    язык должен обеспечивать легкость чтения и понимания (readability) и легкость разработки
+\item 
+    как следствие: язык должен быть русскоязычным. Лексика и синтаксис языка должны минимизировать переключение на латиницу и обратно в процессе разработки программ
 \end{d_itemize}
 
 Название языка происходит от слова "тривиальный", что означает, что при разработке языка практически везде использовались решения, проверенные в других современных языках программирования, в первую очередь "донорами" являются Go, Swift, Kotlin и Oberon.
 
-Несмотря на узкую направленность на разработку компиляторов, \thelang{} является языком программирования общего назначения, пригодным для решения широкого круга задач.
-
-Язык (и экосистема) обладает существенными предпосылками для использование его в качестве учебного языка для обучения студентов разработке компиляторов, библиотек, средств разработки, алгоритмов оптимизации и так далее, в первую очередь это:
+В итоге разработки, несмотря на первоочередную направленность на разработку компиляторов, \thelang{} является
+языком программирования общего назначения, пригодным для решения широкого круга задач.
+ 
+\bigskip
+Получившийся язык (и экосистема) обладает существенными достоинствами для использования в качестве полигона для обучения студентов 
+разработке компиляторов, библиотек, алгоритмов оптимизации и так далее, в первую очередь это:
 \begin{d_itemize}
 \item 
     Простота языка
@@ -29,6 +38,6 @@
 \item 
     Простота компилятора
 \item 
-    Открытая лицензия.
+    Открытая лицензия
 \end{d_itemize}
 
