--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -15,7 +15,7 @@
   Пробелы являются значащими в строковых и символьных литералах (\See{lex:idents}). 
 \end{d_itemize}
 
-Несколько таких разделителей трактуются, как один.
+Несколько разделителей трактуются, как один.
 
 \bigskip
 Исходный текст может содержать \emph{комментарии} (\See{lex:comments}).
