конструктор вектора  - длина, умолчание

--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -241,12 +241,23 @@
 Конструктор вектора применяется к первичному выражению, которое должно обозначать тип вектора. Результатом выполнения конструктора является вектор.
 
 \begin{Grammar}
-Конструктор-вектора: '[' Список-элементов? ']' 
-Список-элементов: Элемент (',' Элемент)* ','?
-Элемент: (Индекс-элемента ':')? Значение
-Индекс-элемента: Выражение
+Конструктор-вектора: '[' (Значения | Элементы)? ']' 
+Значения: Значение (',' Значение)* ','?
 Значение: Выражение
+Элементы: (Заполнение | Элемент) (',' Элемент)* ','?
+Заполнение: ('длина' Выражение)? ':' Значение
+Элемент: Индекс ':' Значение
+Индекс: Выражение
 \end{Grammar}   
+
+Простой конструктор вектора задает последовательность выражений, каждое из которых должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}). Первое выражение в последовательности определяет значение элемента вектора с индексом 0, и так далее. Если ни одного значения не задано, то длина вектора равно нулю.
+
+\begin{Trivil}[vspace=2pt]
+тип Числа = []Цел64
+
+пусть ч = Число[] // вектор длины 0
+пусть ч1 = Число[1, 2, 3] // вектор длины 3
+\end{Trivil}
 
 Пример использования конструктора вектора в вызове:
 \begin{Trivil}[vspace=2pt]
@@ -256,23 +267,53 @@
 Сохранить(Строки["привет", "мир"])
 \end{Trivil}
 
-Для всех элементов должно выполняться:
+Конструктор вектора может быть задан последовательностью пар элементов:  \emph{Индекс}, \emph{Значение}.
+Если хотя бы для одного элемента конструктора задан \emph{Индекс}, то он должен быть задан для всех элементов конструктора.
+
+Первый элемент может определять \emph{Заполнение} вектора и задает или длину вектора и значение элементов по умолчанию или только значение по умолчанию:
 \begin{d_itemize}
 \item
-    \emph{Индекс-элемента} должен быть выражением типа \verb|Цел64| или \verb|Байт|
+    если задана длина, то \emph{Выражение} должно быть типа \verb|Цел64| или \verb|Байт|. Длина может быть не константным выражением.
 \item
     \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}).
 \end{d_itemize}
 
-Если хотя бы для одного элемента конструктора задан \emph{Индекс-элемента}, то он должен быть задан для всех элементов конструктора.
+Для каждого \emph{Элемента} должно выполняться:
+\begin{d_itemize}
+\item
+    \emph{Индекс} должен быть выражением типа \verb|Цел64| или \verb|Байт|
+\item
+    \emph{Индекс} должен быть константным выражением (\See{expr:const-expr})
+\item
+    \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign})
+\end{d_itemize}
 
-Если \emph{Индекс-элемента} задан, то в результирующем векторе в позиции \emph{Индекс-элемента} будет стоять значение \emph{Значение}.
-Если \emph{Индекс-элемента} не задан, то элементы будет размещены в результирующем векторе последовательно, начиная с индекса 0.
+Определение длины вектора:
+\begin{d_itemize}
+\item
+    если длина вектора явно задана, то значение всех индексов должно быть в диапазоне [0..длина-1]. 
+    Это ограничение проверяется во время компиляции, если выражение является константным или во время исполнения.
+\item
+    если длина вектора не задана явно, она равна максимальному индексу + 1.
+\end{d_itemize}
 
-Длина результирующего вектора равна максимальному индексу + 1.
+Если конструктор вектора задает значения не для всех индексов, то \emph{Заполнение} является обязательным.
 
-\TBD: Если конструктор вектора задает значения не для всех индексов, то тип элемента вектора должен быть типом, для которое есть значение по умолчанию. 
-Или должно быть явное значение по умолчанию \verb+*: 1+
+\begin{Trivil}[vspace=2pt]
+тип Числа = []Цел64
+
+пусть ч1 = Число[длина 5: 0, 1: 1, 3: 3] 
+// вектор [0, 1, 0, 3, 0]
+
+пусть ч2 = Число[: 0, 1: 1, 3: 3]  
+// [0, 1, 0, 3], длина - макс индекс + 1
+\end{Trivil}
+
+Пример ошибки - значение по умолчанию не задано:
+\begin{SampleErr}[vspace=2pt]
+пусть ч3 = Число[1: 1, 3: 3]  
+\end{SampleErr}
+
 
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
