--- a/doc/report/8-модули.tex
+++ b/doc/report/8-модули.tex
@@ -84,8 +84,8 @@
     инициализации М выполняется \textbf{до} инициализации тех модулей, которые импортируют М
 \end{d_itemize}
 
-\hypertarget{entry}{%
-\subsection{Инициализация и исполнения программы}\label{mods:entry}}
+\hypertarget{execution}{%
+\subsection{Инициализация и исполнения программы}\label{mods:execution}}
 
 Программа состоит из головного модуля и всех прямо или косвенно импортированных модулей.
 
