--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -244,9 +244,8 @@
 Конструктор-вектора: '[' (Значения | Элементы)? ']' 
 Значения: Значение (',' Значение)* ','?
 Значение: Выражение
-Элементы: (Заполнение | Элемент) (',' Элемент)* ','?
-Заполнение: ('длина' Выражение)? ':' Значение
-Элемент: Индекс ':' Значение
+Элементы:  Элемент (',' Элемент)* ','?
+Элемент: ('длина' | 'резерв' | '*' | Индекс) ':' Выражение
 Индекс: Выражение
 \end{Grammar}   
 
@@ -267,45 +266,65 @@
 Сохранить(Строки["привет", "мир"])
 \end{Trivil}
 
-Конструктор вектора может быть задан последовательностью пар элементов:  \emph{Индекс}, \emph{Значение}.
-Если хотя бы для одного элемента конструктора задан \emph{Индекс}, то он должен быть задан для всех элементов конструктора.
+Конструктор вектора может быть задан последовательностью \emph{Элементов}, где каждый элемент - это пара, разделенная двоеточием.
+Если хотя бы один элемент задан парой, то все элементы конструктора должны быть также заданы парами.
 
-Первый элемент может определять \emph{Заполнение} вектора и задает или длину вектора и значение элементов по умолчанию или только значение по умолчанию:
+\bigskip
+
+Для \emph{Элемента} \verb+Х:выражение+:
+
+\smallskip
+\begin{tabular}[c]{r|p{8.5cm}}
+\verb+X+ & \verb+выражение+ \\ 
+\hline
+\verb+длина+ &  задает длину конструируемого вектора \\
+\hline
+\verb+резерв+ & задает резерв длины конструируемого вектора (см. ниже) \\
+\hline
+\verb+*+ & задает значение по умолчанию для всех элементов, для которых оно не задано явно \\
+\hline
+Индекс &  задает значение элемента с индексом \emph{Индекс} \\
+\end{tabular}
+
+\bigskip
+Следующие условия должны выполняться для вектора, заданного \emph{Элементами}:
 \begin{d_itemize}
 \item
-    если задана длина, то \emph{Выражение} должно быть типа \verb|Цел64| или \verb|Байт|. Длина может быть не константным выражением.
+    выражение для длины должно быть типа \verb|Цел64| или \verb|Байт|
 \item
-    \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}).
-\end{d_itemize}
-
-Для каждого \emph{Элемента} должно выполняться:
-\begin{d_itemize}
+    выражение для резерва должно быть типа \verb|Цел64| или \verb|Байт|. Резерв определяет число элементов, выделенных для вектора, но не обязательно использованных.
+    Если резерв меньше длины, то он игнорируется.
+\item
+    выражение для '*' должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}) 
 \item
     \emph{Индекс} должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \item
     \emph{Индекс} должен быть константным выражением (\See{expr:const-expr})
 \item
-    \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign})
-\end{d_itemize}
-
-Определение длины вектора:
-\begin{d_itemize}
+    выражение для \emph{Индекса} должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign})
 \item
     если длина вектора явно задана, то значение всех индексов должно быть в диапазоне [0..длина-1]. 
-    Это ограничение проверяется во время компиляции, если выражение является константным или во время исполнения.
+    Это ограничение проверяется во время компиляции, если длина задана константным выражением, иначе во время исполнения
 \item
-    если длина вектора не задана явно, она равна максимальному индексу + 1.
+    если в конструкторе задаются значения не для всех индексов, задание значения по умолчанию является обязательным
+\item
+    повторное задание значения для элемента с одним индексом является ошибкой
 \end{d_itemize}
 
-Если конструктор вектора задает значения не для всех индексов, то \emph{Заполнение} является обязательным.
+Если длина конструируемого вектора не задана явно, то она равна максимальному индексу + 1.
 
+\bigskip
+Примеры конструкторов:
 \begin{Trivil}[vspace=2pt]
 тип Числа = []Цел64
 
-пусть ч1 = Число[длина 5: 0, 1: 1, 3: 3] 
+пусть ч1 = Число[длина: 3, *: 0] 
+// вектор [0, 0, 0]
+
+пусть ч2 = Число[длина: 5, *:0, 1: 1, 3: 3] 
 // вектор [0, 1, 0, 3, 0]
 
-пусть ч2 = Число[: 0, 1: 1, 3: 3]  
+пусть ч3 = Число[*: 0, 1: 1, 3: 3]  
 // [0, 1, 0, 3], длина - макс индекс + 1
 \end{Trivil}
 
@@ -314,6 +333,10 @@
 пусть ч3 = Число[1: 1, 3: 3]  
 \end{SampleErr}
 
+Вектор является динамическим массивом, длина которого может изменяться во время выполнения. Конструктор вектора выделяет память под max(длина, резерв) элементов. 
+Если к вектору добавляются элементы (см. \See{stdfuncs:vector-append}), но новое число элементов не превышает резерв, то выделения новой памяти не происходит. 
+
+\TBD: методы резерв, резервировать
 
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
@@ -322,12 +345,12 @@
 Результатом выполнения конструктора является экземпляр класса.
 
 \begin{Grammar}
-Конструктор-класса: '{' Список-пар? '}' 
-Список-пар: Пара (',' Пара)* ','?
-Пара: (Идентификатор ':')? Значение
+Конструктор-класса: '{' Список-значений? '}' 
+Список-значений: Значение-поля (',' Значение-поля)* ','?
+Значение-поля: Идентификатор ':' Значение
 \end{Grammar}   
 
-Для каждой \emph{Пары} идентификатор должен обозначать поле конструируемого класса. 
+Для каждого \emph{Значения поля} идентификатор должен обозначать поле конструируемого класса. 
 В результирующем экземпляре значением этого поля будет значение выражения \emph{Значение}.    
 \emph{Значение} должно быть выражением, \emph{совместимым по присваиванию} с типом поля (\See{compat:assign}).
 
