--- a/doc/report/3-лексика.tex
+++ b/doc/report/3-лексика.tex
@@ -35,7 +35,7 @@
 \begin{Grammar}
 Комментарий
     : '//' (любой символ, кроме завершения строки)*
-    | '/*'  ( любой символ)* '*/
+    | '/*'  (любой символ)* '*/'
 \end{Grammar}
 
 \hypertarget{separators}{%
