--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -245,7 +245,8 @@
 Значения: Значение (',' Значение)* ','?
 Значение: Выражение
 Элементы:  Элемент (',' Элемент)* ','?
-Элемент: ('длина' | 'резерв' | '*' | Индекс) ':' Выражение
+Элемент: 
+    ('длина' | 'выделить' | '*' | Индекс) ':' Выражение
 Индекс: Выражение
 \end{Grammar}   
 
@@ -279,7 +280,7 @@
 \hline
 \verb+длина+ &  задает длину конструируемого вектора \\
 \hline
-\verb+резерв+ & задает резерв длины конструируемого вектора (см. ниже) \\
+\verb+выделить+ & задает число элементов, выделяемых для конструируемого вектора \\
 \hline
 \verb+*+ & задает значение по умолчанию для всех элементов, для которых оно не задано явно \\
 \hline
@@ -290,12 +291,12 @@
 Следующие условия должны выполняться для вектора, заданного \emph{Элементами}:
 \begin{d_itemize}
 \item
-    выражение для длины должно быть типа \verb|Цел64| или \verb|Байт|
+    выражение для \verb+длина+ должно быть типа \verb|Цел64| или \verb|Байт|
 \item
-    выражение для резерва должно быть типа \verb|Цел64| или \verb|Байт|. Резерв определяет число элементов, выделенных для вектора, но не обязательно использованных.
-    Если резерв меньше длины, то он игнорируется.
+    выражение для \verb+выделить+ должно быть типа \verb|Цел64| или \verb|Байт|. Определяет число элементов, выделенных для вектора, но не обязательно использованных.
+    Если значение выражение меньше длины, то элемент игнорируется.
 \item
-    выражение для '*' должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}) 
+    выражение для \verb+*+ должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}) 
 \item
     \emph{Индекс} должен быть выражением типа \verb|Цел64| или \verb|Байт|
 \item
@@ -333,10 +334,15 @@
 пусть ч3 = Число[1: 1, 3: 3]  
 \end{SampleErr}
 
-Вектор является динамическим массивом, длина которого может изменяться во время выполнения. Конструктор вектора выделяет память под max(длина, резерв) элементов. 
-Если к вектору добавляются элементы (см. \See{stdfuncs:vector-append}), но новое число элементов не превышает резерв, то выделения новой памяти не происходит. 
+Вектор является динамическим массивом, длина которого может изменяться во время выполнения. Конструктор вектора выделяет память под max(длина, выделить) элементов. 
+Если к вектору добавляются элементы (см. \See{stdfuncs:vector-append}) и новое число элементов не превышает число выделенных, то выделения новой памяти не происходит. 
 
-\TBD: методы резерв, резервировать
+\begin{Trivil}
+пусть ч1 = Число[выделить: 100] 
+// вектор [], выделено место до 100 элементов
+\end{Trivil}
+
+\TBD: методы выделено, выделить
 
 \hypertarget{class-composite}{%
 \subsection{Конструктор экземпляра класса}\label{expr:class-composite}}
