правка в конструкторе вектора

--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -291,10 +291,11 @@
 Следующие условия должны выполняться для вектора, заданного \emph{Элементами}:
 \begin{d_itemize}
 \item
-    выражение для \verb+длина+ должно быть типа \verb|Цел64| или \verb|Байт|
+    выражение для \verb+длина+ должно быть \emph{совместимым по присваиванию} c типом \verb|Цел64|
 \item
-    выражение для \verb+выделить+ должно быть типа \verb|Цел64| или \verb|Байт|. Определяет число элементов, выделенных для вектора, но не обязательно использованных.
-    Если значение выражение меньше длины, то элемент игнорируется.
+    выражение для \verb+выделить+ должно быть \emph{совместимым по присваиванию} c типом \verb|Цел64|. 
+    Оно определяет число элементов, выделенных для вектора, но не обязательно использованных.
+    Если значение для выделить меньше или равно длине, то оно игнорируется.
 \item
     выражение для \verb+*+ должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}) 
 \item
