правка конструктора вектора

--- a/doc/report/5-выражения.tex
+++ b/doc/report/5-выражения.tex
@@ -299,7 +299,7 @@
 \item
     выражение для \verb+*+ должно быть \emph{совместимым по присваиванию} с типом элемента вектора (\See{compat:assign}) 
 \item
-    \emph{Индекс} должен быть выражением типа \verb|Цел64| или \verb|Байт|
+    \emph{Индекс} должен быть выражением  \emph{совместимым по присваиванию} c типом \verb|Цел64|
 \item
     \emph{Индекс} должен быть константным выражением (\See{expr:const-expr})
 \item
