--- a/doc/report/4-описания.tex
+++ b/doc/report/4-описания.tex
@@ -216,13 +216,28 @@
 \hypertarget{types}{%
 \subsection{Описание типов}\label{decls:types}}
 
-Описание типа связывает идентификатор с новым типом, который определяет структуру данных этого типа, и, как следствие, набор операций над данными этого типа.
+Описание типа связывает идентификатор с новым или существующим типом.
 
 \begin{Grammar}
-Описание-типа: 'тип' Идент '=' (Тип-вектора | Тип-класса)
+Описание-типа: 
+    'тип' Идент '=' 
+    ( Тип-вектора 
+    | Тип-класса
+    | Указ-типа
+    )
 \end{Grammar} 
 
-В текущей версии языка поддерживают два структурных типа: тип вектора (\See{decls:vector-types}) и тип класса (\See{decls:class-types}).
+Если в описание типа указан тип вектора (\See{decls:vector-types}) или тип класса (\See{decls:class-types}), то создается новый тип и определяется структура данных этого типа, и, как следствие, набор операций над данными этого типа.
+
+Если в описании типа стоит указание на тип (\See{decls:type-ref}), то это определение еще одного имени для уже существующего типа или задание имени для \emph{может быть типа} (\See{decls:mb-types}). 
+
+\begin{Trivil}
+тип Текст= []Строка
+тип Цел = Цел64
+тип Строка? = мб Строка
+\end{Trivil}
+
+Так как указание типа не создает новый тип, использование типа \verb+Цел+ из примера идентично использованию типа \verb+Цел64+.
 
 \hypertarget{vector-types}{%
 \subsection{Тип вектора}\label{decls:vector-types}}
