Переименование файлов отчета о языке
Signed-off-by: Dmitry Solomennikov <dmitrys99@mail.ru>

--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -8,22 +8,23 @@
 
 \title{Язык программирования \thelang{}}
 \date{\reportDate}
+
 \begin{document}
 
 \maketitle
 
-\include{toc}
+\include{00-Оглавление}
 
-\include{1-назначение}
-\include{2-обзор}
-\include{3-лексика}
-\include{4-описания}
-\include{5-выражения}
-\include{6-операторы}
-\include{7-стдфунк}
-\include{8-модули}
-\include{9-совместимость}
-\include{10-небезопасные}
+\include{01-Назначение}
+\include{02-Обзор}
+\include{03-Лексика}
+\include{04-Описания}
+\include{05-Выражения}
+\include{06-Операторы}
+\include{07-СтдФункции}
+\include{08-Модули}
+\include{09-Совместимость}
+\include{10-Небезопасные}
 
 \printindex
 
