добавление главы Обобщенные модули

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -97,10 +97,11 @@
 Следующие ключевые слова зарезервированы и не могут быть использованы, как идентификаторы:
 
 \begin{tabular}[c]{*{5}{p{2cm}}}
-авария &    есть &          когда &     надо &              прервать \\
-вернуть &  иначе &        конст &     осторожно &    пусть \\
-вход &       импорт &      мб &         пока &              тип \\
-если &       класс &         модуль &  позже &            фн 
+авария &    иначе &    мб &               пока       &  фн   \\
+вернуть &  импорт &  модуль &        прервать &         \\
+вход &       класс &     надо &            пусть       &        \\
+если &       когда &     настройка &   позже      &        \\                                        
+есть &        конст &    осторожно &  тип          &        \\
 \end{tabular}
 
 
