--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -4,7 +4,7 @@
   Алексей Недоря
 }
 
-\def\reportDate{05.03.2023}
+\def\reportDate{14.03.2023}
 
 \title{Язык программирования \thelang{}}
 \date{\reportDate}
@@ -23,8 +23,9 @@
 \include{06-Операторы}
 \include{07-СтдФункции}
 \include{08-Модули}
-\include{09-Совместимость}
-\include{10-Небезопасные}
+\include{09-Обобщенные.tex}
+\include{10-Совместимость}
+\include{11-Небезопасные}
 
 \printindex
 
