--- a/doc/report/08-Модули.tex
+++ b/doc/report/08-Модули.tex
@@ -85,7 +85,7 @@
 \end{d_itemize}
 
 \hypertarget{execution}{%
-\subsection{Инициализация и исполнения программы}\label{mods:execution}}
+\subsection{Инициализация и исполнение программы}\label{mods:execution}}
 
 Программа состоит из головного модуля и всех прямо или косвенно импортированных модулей.
 
