добавил раздел про Строка8 (пустой)

--- a/doc/report/11-Небезопасные.tex
+++ b/doc/report/11-Небезопасные.tex
@@ -1,8 +1,12 @@
 \hypertarget{unsafe}{%
 \section{Применять с осторожностью}\label{unsafe:chapter}}
 
+Низкоуровневые типы и операции.
+
 \hypertarget{unsafe-conversions}{%
 \subsection{Осторожные преобразования}\label{unsafe:conversions}}
 
+\hypertarget{type-string8}{%
+\subsection{Тип Строка8}\label{unsafe:type-string8}}
 
 
