--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -408,22 +408,21 @@
 \subsection{Унарные операции}\label{expr:unary-ops}}
 
 \begin{Grammar}
-Унарная-операция: '-' | '~'
+Унарная-операция: '-' | '~' | ':~' 
 \end{Grammar}   
 
 \begin{tabular}[c]{c|l|l}
-\textbf{Операция} & \textbf{Тип Операнда} &  \textbf{Тип результата} \\ 
+\textbf{Операция} & \textbf{Действие} &  \textbf{Разрешенные типы} \\ 
 \hline
-\multirow{3}*{-} & Цел64 & Цел64 \\ 
-& Слово64 & Слово64 \\
-& Вещ64 & Вещ64 \\
-\hline
-\verb|~| (not) & Лог & Лог \\
+\verb|-| & отрицание & Байт, Цел64, Слово64, Вещ64 \\
+\verb|~| & логическое НЕ & Лог \\
+\verb|:~| & инвертирование битов & Байт, Цел64, Слово64 \\
 \hline
 \end{tabular}
 
 \bigskip
 Унарные операторы имеют приоритет выше, чем бинарные, то есть выражение \verb|-х + 1| выполняется как \verb|(-х) + 1|.
+Тип результата унарных операций равен типу операнда.
 
 \hypertarget{binary-ops}{%
 \subsection{Бинарные операции}\label{expr:binary-ops}}
@@ -434,13 +433,14 @@
     | Сравнения
     | Логические
     | Битовые
+    | Сдвиги
 Арифметические: '+' | '-' | '*' | '/' | '%'
 Сравнения: '=' | '#' | '<' | '<=' | '>' | '>='
 Логические: '|' | '&' 
-Битовые: TBD
+Битовые: ':|' | ':&' | ':\'
+Сдвиги:   '<<' | '>>'
 \end{Grammar} 
 
-\TBD: Определить множество и знаки битовых операций.
 
 \hypertarget{ops-precedence}{%
 \subsubsection{Приоритеты операции}\label{expr:ops-precedence}}
@@ -514,7 +514,16 @@
 \hypertarget{ops-bitwise}{%
 \subsubsection{Битовые операции}\label{expr:ops-bitwise}}
 
-\TBD: будут определены позже.
+Операции \emph{битовое ИЛИ} (\verb+:|+), \emph{битовое И} (\verb+:&+) и \emph{XOR - битовое исключающее ИЛИ} (\verb+:\+) 
+применимы к операндам целых типов (Байт, Цел64, Слово64), оба операнда должны быть одного типа. 
+Тип результата равен типу операндов.
+
+\hypertarget{ops-shifts}{%
+\subsubsection{Операции сдвига}\label{expr:ops-shifts}}
+
+Операции \emph{сдвиг влево} (\verb+<<+) и \emph{сдвиг вправо} (\verb+>>+) применимы к операндам целых типов
+и выдают результат того же типа, что и тип первого операнда.
+
 
 \hypertarget{const-expr}{%
 \subsection{Константные выражения}\label{expr:const-expr}}
