--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -6,11 +6,14 @@
 \begin{Grammar}
 Выражение
     : Унарное-выражение
+    | Проверка-типа
     | Выражение Бинарная-операция Выражение
 
 Унарное-выражение
     : Первичное-выражение
     | Унарная-операция Унарное-выражение
+    
+Проверка-типа: Выражение 'типа' Указ-типа 
 \end{Grammar}    
 
 \hypertarget{primary-expr}{%
@@ -423,6 +426,28 @@
 \bigskip
 Унарные операторы имеют приоритет выше, чем бинарные, то есть выражение \verb|-х + 1| выполняется как \verb|(-х) + 1|.
 Тип результата унарных операций равен типу операнда.
+
+\hypertarget{of-type}{%
+\subsection{Проверка типа}\label{expr:of-type}}
+
+Операция \emph{проверка типа} применима к выражению типа класс и проверяет, что \emph{динамический} тип объекта равен типу, указанному в операции, 
+или является расширением этого типа. Тип, указанный в операции, должен быть типом класса.
+
+\begin{Grammar}
+Проверка-типа: Выражение 'типа' Указ-типа 
+\end{Grammar}    
+
+\begin{Trivil}
+тип К1 = класс {}
+тип К2 = класс (К1) {}
+
+пусть к1: К1 = К1{}
+пусть к2: К1 = К2{}
+
+пусть б :=  к1 типа К2 // ложь
+б := к2 типа К2 // истина
+\end{Trivil}
+
 
 \hypertarget{binary-ops}{%
 \subsection{Бинарные операции}\label{expr:binary-ops}}
