--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -124,9 +124,14 @@
 \subsection{Целочисленные литералы}\label{lex:intlit}}
 
 \begin{Grammar}
-Целочисленный-литерал: Цифра+  | '0x' Цифра16+
+Целочисленный-литерал: 
+    Десятичный-литерал | Шестнадцатеричный-литерал
+Десятичный-литерал: Цифра+  
+Шестнадцатеричный-литерал: '0x' Цифра16+
 Цифра16: '0'..'9' | 'a'..'f' | 'A'..'F'
 \end{Grammar}    
+
+Тип десятичного литерала: \verb+Цел64+, тип шестнадцатеричного литерала: \verb+Слово64+ (\See{decls:predefined-types}). 
 
 \hypertarget{floatlit}{%
 \subsection{Вещественные литералы}\label{lex:floatlit}}
@@ -136,6 +141,8 @@
 \begin{Grammar}
 Вещественный-литерал: Цифра+ '.' Цифра*
 \end{Grammar}      
+
+Тип вещественного литерала: \verb+Вещ64+ (\See{decls:predefined-types}). 
 
 \hypertarget{strlit}{%
 \subsection{Строковые литералы}\label{lex:strlit}}
@@ -156,6 +163,8 @@ Escape
     )
 \end{Grammar}  
 
+Тип строкового литерала: \verb+Строка+ (\See{decls:predefined-types}). 
+
 \hypertarget{symlit}{%
 \subsection{Символьные литералы}\label{lex:symlit}}
 
@@ -168,6 +177,8 @@ Escape
     ~("'" | '\\' | '\n' | '\r' | '\t') | escape_value)
     "'"
 \end{Grammar}  
+
+Тип символьного литерала: \verb+Символ+ (\See{decls:predefined-types}). 
 
 \hypertarget{modifiers}{%
 \subsection{Модификаторы}\label{lex:modifiers}}
