--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -229,11 +229,13 @@
 
 Если в описание типа указан тип вектора (\See{decls:vector-types}) или тип класса (\See{decls:class-types}), то создается новый тип и определяется структура данных этого типа, и, как следствие, набор операций над данными этого типа.
 
-Если в описании типа стоит указание на тип (\See{decls:type-ref}), то это определение еще одного имени для уже существующего типа или задание имени для \emph{может быть типа} (\See{decls:mb-types}). 
+Если в описании типа стоит указание на тип (\See{decls:type-ref}), 
+то это определение еще одного имени для уже существующего типа 
+или задание имени для \emph{типа вектора} (\See{decls:vector-types}) или \emph{может быть типа} (\See{decls:mb-types}). 
 
 \begin{Trivil}
-тип Текст= []Строка
 тип Цел = Цел64
+тип Текст= []Строка
 тип Строка? = мб Строка
 \end{Trivil}
 
@@ -320,7 +322,7 @@
 
 Расширенный класс наследует поля и методы базового класса и может добавлять новые поля и методы.
 Обращение к полям и методам базового класса ничем не отличается от обращения к полям и методам самого класса. 
-Методы базового класса можно переопределять, сохраняя те же самые типы параметра и тип результата.
+Методы базового класса можно переопределять, сохраняя те же самые типы параметра и тип результата (See{compat:equal-types}).
 
 \hypertarget{mb-types}{%
 \subsection{Может быть тип}\label{decls:mb-types}}
@@ -450,9 +452,11 @@
 \item
     Число параметров должно совпадать
 \item
-    Типы  параметров должны быть эквивалентны \See{compat:equal-types}
+    Типы  результата должны быть равны \See{compat:equal-types}
+\item
+    Типы  параметров должны быть равны \See{compat:equal-types}
 \item 
-    Признаки вариативности и полиморфности должны совпадать
+    Признаки вариативности и полиморфности для каждого параметра должны совпадать
 \end{d_itemize}
 
 Пример ошибки при переопределении метода (разное число параметров):
