--- a/doc/report/10-Совместимость.tex
+++ b/doc/report/10-Совместимость.tex
@@ -4,7 +4,51 @@
 \hypertarget{equal-types}{%
 \subsection{Эквивалентность типов}\label{compat:equal-types}}
 
+Во многих случаях, например, для большинства бинарных операция или при переопределения методов, требуется эквивалентность типов. 
+
+Тип в языке \thelang{} эквивалентен (равен) только сам себе. 
+
+Переименование типа не создает новый тип, таким образом, после описания: 
+\begin{Trivil}
+тип Числа = Цел64 
+пусть ч: Число = 1
+пусть ц: Цел64 = 2
+пусть с: Слово64 = 3
+\end{Trivil} 
+типы переменных \verb+ч+ и \verb+ц+ эквивалентны, так как это один и тот же тип. В то же время, типы переменных \verb+с+ и \verb+ц+ не эквивалентны, так как это разные типы.
+
 \hypertarget{compat-assign}{%
 \subsection{Совместимость по присваиванию}\label{compat:assign}}
+
+Совместимость по присваиванию используется в следующих случаях:
+\begin{d_itemize}
+\item
+    инициализация констант и переменных с явным типом: \verb+пусть х: Т = выражение+, выражение должно быть совместимо с типом \verb+Т+
+\item
+    оператор присваивания: \verb+х := выражение+
+\item
+    оператор \verb+вернуть выражение+, выражение должно быть совместимо с типом результата функции
+\item
+    передача фактических параметров при вызове: \verb+Ф(аргумент1, ..., аргументN)+, аргумент должен быть совместим с типом параметра
+\end{d_itemize}
+
+Значение типа \emph{ТВ} совместимо по присваиванию с целевым типом \emph{ТП} (типом переменной, константы или параметра),
+если выполняется одно из условий:
+\begin{d_itemize}
+\item 
+    \emph{ТП} и \emph{ТВ} эквивалентны
+\item 
+    \emph{ТП} это целый тип (Байт, Цел64, Слово64), а значение - это литерал целого типа, причем значение литерала входит в допустимый диапазон значений \emph{ТП} 
+\item 
+    \emph{ТП} и \emph{ТВ} это типы векторов и типы их элементов эквивалентны
+\item 
+    \emph{ТП} это \emph{\keyword{мб} Т1}, а значение есть 'пусто' или \emph{ТП} это \emph{\keyword{мб} Т2} и типы \emph{Т1} и \emph{Т2} эквивалентны
+\item 
+    \emph{ТП} и \emph{ТВ} это типы классов и \emph{ТВ} является расширением  \emph{ТП}
+\item 
+    переменная является полиморфным параметром
+\end{d_itemize}
+
+
 
 
