--- a/doc/report/02-Обзор.tex
+++ b/doc/report/02-Обзор.tex
@@ -1,7 +1,7 @@
 \hypertarget{review}{%
 \section{Обзор языка}\label{review:chapter}}
 
-\thelang{} - это модульный язык с явным экспортом и импортом, автоматическим управлением памятью (сборка мусора), с поддержкой ООП.
+\thelang{} - это модульный язык с явным экспортом и импортом, с поддержкой ООП и автоматическим управлением памятью (сборка мусора).
 
 Программа на языке \thelang{} состоит из модулей (единиц компиляции), исходный текст каждого модуля расположен в одном или нескольких исходных файлов.
 
