--- a/doc/report/08-Модули.tex
+++ b/doc/report/08-Модули.tex
@@ -65,7 +65,7 @@
     Имя-хранилища '::' Имя-папки ('/' Имя-папки)*
 \end{Grammar} 
 
-\emph{Путь в хранилище} состоит из имени хранилища, которое явным или неявным образом (см. See{install:chapter}) должно быть привязано к определенной папки файловой системы и пути, относительно этой папки:
+\emph{Путь в хранилище} состоит из имени хранилища, которое явным или неявным образом (см. README) должно быть привязано к определенной папки файловой системы и пути, относительно этой папки:
 \begin{Trivil}[vspace=2pt]
 импорт "стд::юникод/utf8" 
 
