--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -27,8 +27,8 @@
 \include{10-Совместимость}
 \include{11-Небезопасные}
 
-\appendix
-\include{A1-Установка}
+%\appendix
+%\include{A1-Установка}
 
 \printindex
 
