Строка, Строка8, осторожные преобразования

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -88,11 +88,27 @@
 Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
 Лог & константы \verb|ложь| и \verb|истина| \\ 
 Символ & множество всех Unicode символов \\ 
-Строка & множество всех строковых литералов
+Строка & множество всех строковых значений (\See{decls:string-type})
 \end{tabular}
 
 \bigskip
 Операции над значениями этих типов определены в (\See{expr:unary-ops}, \See{expr:binary-ops}).
+
+\hypertarget{string-type}{%
+\subsubsection{Тип Строка}\label{decls:string-type}}
+
+Строковый тип представляет собой набор строковых значений. Строковое значение - это (возможно, пустая) последовательность Unicode символов в кодировке UTF-8.
+Количество символов называется длиной строки и никогда не бывает отрицательным. 
+Строки неизменяемы: после создания изменить содержимое строки невозможно. 
+Количество символов строки можно определить с помощью встроенной функции \verb+длина+ (\See{stdfuncs:stdlen}).
+
+Операция индексации для строк не определена:
+\begin{SampleErr}[vspace=2pt]
+    пусть с = "привет"
+    пусть сим = с[0] // ошибка
+\end{SampleErr}
+
+Для работы с байтами строки можно использовать тип Строка8 (\See{unsafe:type-string8}).
 
 \hypertarget{type-ref}{%
 \subsection{Указание типа}\label{decls:type-ref}}
