--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -269,12 +269,12 @@
 \end{Trivil}
 
 \hypertarget{crash-stmt}{%
-\subsection{Оператор 'авария' и аварийное завершение}\label{stmt:crash-stmt}}
+\subsection{Оператор 'авария' и аварийная ситуация}\label{stmt:crash-stmt}}
 
-Оператор \keyword{авария} запускает аварийную ситуация, которая, обычно, приводит к аварийному завершению программы. 
+Оператор \keyword{авария} запускает аварийную ситуация, которая, как правило, приводит к аварийному завершению программы. 
 
 \begin{Grammar}
-Оператор-вернуть: 'авария' '(' Выражение ')'
+Оператор-авария: 'авария' '(' Выражение ')'
 \end{Grammar}
 
 Тип выражения должен быть Строка. Значение этого выражения используется в сообщении об аварийной ситуации.
@@ -282,11 +282,11 @@
 Кроме явного запуска аварийной ситуации, аварийная ситуация может быть запущена неявно, в следующих случаях:
 \begin{d_itemize}
 \item
-    Выход индекса за пределы вектора при индексации
+    Выход индекса за границы вектора при индексации
 \item
     Операция подтверждения типа выполнена над объектом со значением 'пусто'
 \item
-    Недопустимое преобразования типа 
+    Недопустимое преобразование типа 
 \item
     Недопустимая последовательность байт в кодировке UTF-8
 \item
