--- a/doc/report/07-СтдФункции.tex
+++ b/doc/report/07-СтдФункции.tex
@@ -7,9 +7,9 @@
 \hypertarget{stdlen}{%
 \subsubsection{Длина}\label{stdfuncs:stdlen}}
 
-Стандартная функция \verb+длина+ возвращает длину строк, векторов и вариативных параметров. Тип результата: Цел64.
+Стандартная функция \verb+длина+ возвращает длину строк, векторов и вариативных параметров, см. также (\See{unsafe:type-string8}). Тип результата: Цел64.
 
-Длина строки считается в символах. Для остальных типов выдается число элементов.
+Длина строки считается в символах. Для остальных типов длина выдает число элементов.
 
 \begin{Trivil}
     пусть д1 = длина("Привет") // равно 6
