константные выражения, добавлена функция
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -556,7 +556,7 @@
 Константные выражения - это выражения, которые могут быть вычислены во время компиляции.
 
 Минимальные требования к компилятору языка \thelang{}: компилятор должен вычислять выражение, состоящее из одного операнда, который является литералом или 
-идентификатором, обозначающим константу.
+идентификатором, обозначающим константу или функцию (не метод).
 
 
 
