структурная эквивалентность для векторов и мб типов.
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -351,7 +351,7 @@
 \begin{d_itemize}
 \item
     Если в указании типа объекта использована нотация \emph{\keyword{мб} Т}, где \emph{Т} - это некоторый ссылочный тип,  
-    то значением этого объекта, кроме значений типа \emph{Т}, может быть специальное значение 'пусто'. Тип такого объекта называется \emph{может быть Т}.
+    то значением этого объекта, кроме значений типа \emph{Т}, может быть специальное значение 'пусто'. Тип такого объекта называется \emph{может быть Т}. Тип \emph{Т} называется \emph{базовым типом}.
 \item
     Иначе, если ключевое слово \keyword{мб} отсутствует в указании типа объекта, значением этого объекта может быть только значений типа \emph{Т}.
 \end{d_itemize}
@@ -412,7 +412,7 @@
 Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
 \end{Grammar} 
 
-Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра. Если тип вариативного парметра указан как \emph{Т}, то в теле функции типом  параметра является \verb+[]T+.
+Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра. Если тип вариативного параметра указан как \emph{Т}, то в теле функции типом  параметра является \verb+[]T+.
 
 \hypertarget{params-poly}{%
 \subsubsection{Полиморфные параметры}\label{decls:params-poly}}
