--- a/doc/report/10-Совместимость.tex
+++ b/doc/report/10-Совместимость.tex
@@ -6,7 +6,15 @@
 
 Во многих случаях, например, для большинства бинарных операция или при переопределения методов, требуется эквивалентность типов. 
 
-Тип в языке \thelang{} эквивалентен (равен) только сам себе. 
+Два типа  \emph{Т1} и \emph{Т2} эквивалентны, если выполняется одно из условий:
+\begin{d_itemize}
+\item
+    типы \emph{Т1} и \emph{Т2} это один и тот же тип, возможно, переименованный, так как переименование типа не создает новый тип
+\item
+    типы \emph{Т1} и \emph{Т2} это типы векторов и типы их элементов эквивалентны
+\item
+    типы \emph{Т1} и \emph{Т2} это \emph{может быть} типы и их базовые типы эквивалентны
+\end{d_itemize}
 
 Переименование типа не создает новый тип, таким образом, после описания: 
 \begin{Trivil}
